Add home section to index.html

--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
     <a id="navAnalyze">Analyze Word</a>
     <a id="navFind">Find Words</a>
   </nav>
+
+  <!-- Home Section -->
+  <div id="homeSection" class="section">
+    <h2>Welcome!</h2>
+    <p>Please choose one of the following options:</p>
+    <button onclick="showSection('gameSection')">Play Game</button>
+    <button onclick="showSection('analyzeSection')">Analyze a Word</button>
+    <button onclick="showSection('findSection')">Find Words by Pattern</button>
+  </div>
   
   <!-- Game Section -->
   <div id="gameSection" class="section">
