--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 <body>
   <h1>Perfect Pattern App</h1>
   <nav>
-    <a id="navHome">Home</a>
+    <div style="margin-bottom: 10px;">
+      <a id="navHome" style="font-weight: bold; color: darkblue;">Home</a>
+    </div>
+    <div>
     <a id="navGame">Game</a>
     <a id="navAnalyze">Analyze Word</a>
     <a id="navFind">Find Words</a>
@@ -73,6 +76,21 @@
   <!-- Find Words Section -->
   <div id="findSection" class="section">
     <h2>Find Words by Pattern</h2>
+    <p>
+      Enter a pattern name below (like <strong>ONE_LINE</strong>, <strong>SAME</strong>, or <strong>CONSECUTIVE_321</strong>).
+      The app will return <strong>5 random words</strong> that match that pattern.
+      Hover over each word to see how the letters are positioned on the keyboard!
+    </p>
+    
+    <ul>
+      <strong>Available patterns:</strong>
+      <li><strong>ONE_LINE</strong> – All letters on the same row</li>
+      <li><strong>SAME</strong> – Equal number of letters on all 3 rows</li>
+      <li><strong>CONSECUTIVE_321</strong> – A 3-2-1 distribution</li>
+      <li><strong>CONSECUTIVE_210</strong> – A 2-1-0 distribution</li>
+      <li><strong>CONSECUTIVE_432</strong> – A 4-3-2 distribution</li>
+      <li><strong>DIAMOND</strong> – Same letters on lines 1 & 3, different on line 2</li>
+    </ul>
     <input type="text" id="findInput" placeholder="Enter a pattern (e.g., ONE_LINE)">
     <button id="findButton">Find</button>
     <ul id="findResult"></ul>
