title index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Perfect Pattern App</title>
+  <title>Keyboard Game</title>
   <style>
     body { font-family: Arial, sans-serif; padding: 20px; }
     .section { display: none; }
