--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </style>
 </head>
 <body>
-  <h1>Perfect Pattern App</h1>
+  <h1>Keyboard Game</h1>
   <nav>
     <div style="margin-bottom: 10px;">
       <a id="navHome" style="font-weight: bold; color: darkblue;">Home</a>
