--- a/index.html
+++ b/index.html
@@ -76,12 +76,13 @@
     <div>
       <h3>Pattern Key</h3>
       <ul>
-        <li>1 or ONE/ONE_LINE : ONE_LINE</li>
-        <li>2 or SAME : SAME</li>
-        <li>3 or 321/123 : CONSECUTIVE_321</li>
-        <li>4 or 210/012 : CONSECUTIVE_210</li>
-        <li>5 or 432/234 : CONSECUTIVE_432</li>
-        <li>6 or DIAMOND : DIAMOND</li>
+        <strong>Available patterns:</strong>
+        <li><strong>ONE_LINE</strong> – All letters on the same row</li>
+        <li><strong>SAME</strong> – Equal number of letters on all 3 rows</li>
+        <li><strong>CONSECUTIVE_321</strong> – A 3-2-1 distribution</li>
+        <li><strong>CONSECUTIVE_210</strong> – A 2-1-0 distribution</li>
+        <li><strong>CONSECUTIVE_432</strong> – A 4-3-2 distribution</li>
+        <li><strong>DIAMOND</strong> – Same letters on lines 1 & 3, different on line 2</li>
       </ul>
     </div>
 
@@ -269,7 +270,7 @@
       document.getElementById("gameContainer").style.display = "none";
       document.getElementById("gameOver").style.display = "block";
       document.getElementById("finalScore").textContent =
-        `Game Over! You ${gameEndReason.toLowerCase()}. Your final score is ${score}.`;
+        `Game Over! ${gameEndReason}. Your final score is ${score}.`;
       
       highScores.push({ score, date: new Date().toLocaleString() });
       highScores.sort((a, b) => b.score - a.score);
