--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
       <p id="gameFeedback" style="color: green;"></p>
       <p><strong>Pattern Key:</strong></p>
       <ul>
-        <li>1 or ONE/ONE_LINE : ONE_LINE</li>
-        <li>2 or SAME         : SAME</li>
-        <li>3 or 321/123      : CONSECUTIVE_321</li>
-        <li>4 or 210/012      : CONSECUTIVE_210</li>
-        <li>5 or 432/234      : CONSECUTIVE_432</li>
-        <li>6 or DIAMOND      : DIAMOND</li>
+        <li><strong>ONE_LINE (accept: one line) </strong> – All letters on the same row</li>
+        <li><strong>SAME (accept: same) </strong> – Equal number of letters on all 3 rows</li>
+        <li><strong>CONSECUTIVE_321 (accept: 321) </strong> – A 3-2-1 distribution</li>
+        <li><strong>CONSECUTIVE_210 (accept: 210) </strong> – A 2-1-0 distribution</li>
+        <li><strong>CONSECUTIVE_432 (accept: 432) </strong> – A 4-3-2 distribution</li>
+        <li><strong>DIAMOND (accept: diamond) </strong> – Same letters on lines 1 & 3, different on line 2</li>
       </ul>
     </div>
     <div id="gameOver" style="display:none;">
