--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
         width: auto;
       }
     }
+  
+  .section {
+    display: none;
+  }
+  .section.active {
+    display: block;
+  }
+
 
   </style>
 </head>
